--- a/lab-hypothesis-testing.ipynb
+++ b/lab-hypothesis-testing.ipynb
@@ -38,13 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#libraries\n",
     "import pandas as pd\n",
-    "import scipy.stats as st\n",
+    "import scipy.stats as stats\n",
     "import numpy as np\n",
     "\n"
    ]
@@ -297,11 +297,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Levene's Test for Equality of Variances\n",
+      "Statistic: 1.867317074967163, p-value: 0.17484739934331067\n",
+      "\n",
+      "Independent Samples t-Test\n",
+      "t-statistic: 3.590444254130357, p-value: 0.0005135938300306962\n",
+      "\n",
+      "Reject the null hypothesis: There is a significant difference in HP between Dragon and Grass Pokémon.\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "dragon_hp = df[df['Type 1'] == 'Dragon']['HP']\n",
+    "grass_hp = df[df['Type 1'] == 'Grass']['HP']\n",
+    "\n",
+    "# Perform Levene's test for equality of variances\n",
+    "levene_test = stats.levene(dragon_hp, grass_hp)\n",
+    "\n",
+    "# Perform the independent samples t-test\n",
+    "t_test = stats.ttest_ind(dragon_hp, grass_hp, equal_var=levene_test.pvalue > 0.05)\n",
+    "\n",
+    "# Summarize the results\n",
+    "print(\"Levene's Test for Equality of Variances\")\n",
+    "print(f\"Statistic: {levene_test.statistic}, p-value: {levene_test.pvalue}\")\n",
+    "print(\"\\nIndependent Samples t-Test\")\n",
+    "print(f\"t-statistic: {t_test.statistic}, p-value: {t_test.pvalue}\")\n",
+    "\n",
+    "# Interpret the results\n",
+    "alpha = 0.05\n",
+    "if t_test.pvalue < alpha:\n",
+    "    print(\"\\nReject the null hypothesis: There is a significant difference in HP between Dragon and Grass Pokémon.\")\n",
+    "else:\n",
+    "    print(\"\\nFail to reject the null hypothesis: There is no significant difference in HP between Dragon and Grass Pokémon.\")"
    ]
   },
   {
@@ -313,11 +347,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Levene Statistic</th>\n",
+       "      <th>Levene p-value</th>\n",
+       "      <th>t-statistic</th>\n",
+       "      <th>t-test p-value</th>\n",
+       "      <th>Different Stats</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>HP</th>\n",
+       "      <td>0.313261</td>\n",
+       "      <td>0.575843</td>\n",
+       "      <td>8.036124</td>\n",
+       "      <td>3.330648e-15</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Attack</th>\n",
+       "      <td>0.000048</td>\n",
+       "      <td>0.994465</td>\n",
+       "      <td>10.397321</td>\n",
+       "      <td>7.827253e-24</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Defense</th>\n",
+       "      <td>0.988777</td>\n",
+       "      <td>0.320343</td>\n",
+       "      <td>7.181240</td>\n",
+       "      <td>1.584223e-12</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <td>0.804098</td>\n",
+       "      <td>0.370141</td>\n",
+       "      <td>14.191406</td>\n",
+       "      <td>6.314916e-41</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <td>0.080710</td>\n",
+       "      <td>0.776411</td>\n",
+       "      <td>11.037751</td>\n",
+       "      <td>1.843981e-26</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Speed</th>\n",
+       "      <td>9.823257</td>\n",
+       "      <td>0.001786</td>\n",
+       "      <td>11.475044</td>\n",
+       "      <td>1.049016e-18</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Levene Statistic  Levene p-value  t-statistic  t-test p-value  \\\n",
+       "HP               0.313261        0.575843     8.036124    3.330648e-15   \n",
+       "Attack           0.000048        0.994465    10.397321    7.827253e-24   \n",
+       "Defense          0.988777        0.320343     7.181240    1.584223e-12   \n",
+       "Sp. Atk          0.804098        0.370141    14.191406    6.314916e-41   \n",
+       "Sp. Def          0.080710        0.776411    11.037751    1.843981e-26   \n",
+       "Speed            9.823257        0.001786    11.475044    1.049016e-18   \n",
+       "\n",
+       "         Different Stats  \n",
+       "HP                  True  \n",
+       "Attack              True  \n",
+       "Defense             True  \n",
+       "Sp. Atk             True  \n",
+       "Sp. Def             True  \n",
+       "Speed               True  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#code here"
+    "# Filter the data for Legendary and Non-Legendary Pokémon\n",
+    "legendary = df[df['Legendary'] == True]\n",
+    "non_legendary = df[df['Legendary'] == False]\n",
+    "\n",
+    "# Stats to compare\n",
+    "stats_columns = ['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed']\n",
+    "\n",
+    "# Store results\n",
+    "results = {}\n",
+    "\n",
+    "for stat in stats_columns:\n",
+    "    # Levene's test for equality of variances\n",
+    "    levene_test = stats.levene(legendary[stat], non_legendary[stat])\n",
+    "    \n",
+    "    # Independent samples t-test\n",
+    "    t_test = stats.ttest_ind(legendary[stat], non_legendary[stat], equal_var=levene_test.pvalue > 0.05)\n",
+    "    \n",
+    "    # Store the results\n",
+    "    results[stat] = {\n",
+    "        'Levene Statistic': levene_test.statistic,\n",
+    "        'Levene p-value': levene_test.pvalue,\n",
+    "        't-statistic': t_test.statistic,\n",
+    "        't-test p-value': t_test.pvalue\n",
+    "    }\n",
+    "\n",
+    "# Summarize the results\n",
+    "results_df = pd.DataFrame(results).T\n",
+    "results_df\n",
+    "\n",
+    "# Interpret the results\n",
+    "alpha = 0.05\n",
+    "interpretation = results_df['t-test p-value'] < alpha\n",
+    "results_df['Different Stats'] = interpretation\n",
+    "results_df"
    ]
   },
   {
@@ -337,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +624,7 @@
        "4       624.0       262.0         1.9250             65500.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,10 +654,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Levene Statistic  Levene p-value  t-statistic  t-test p-value  \\\n",
+      "Value          4.734031        0.029585   -17.174168        0.000052   \n",
+      "\n",
+      "                                              Conclusion  \n",
+      "Value  Reject the null hypothesis: Houses close to a ...  \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/n6/6tdhcx8d7tq5v5rgh8bbvm8c0000gn/T/ipykernel_48222/3010455298.py:38: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  interpretation = results_df['t-test p-value'][0] < alpha\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Coordinates of the school and hospital\n",
+    "school_coords = (-118, 37)\n",
+    "hospital_coords = (-122, 34)\n",
+    "\n",
+    "# Function to calculate Euclidean distance\n",
+    "def euclidean_distance(lat1, lon1, lat2, lon2):\n",
+    "    return np.sqrt((lat1 - lat2) ** 2 + (lon1 - lon2) ** 2)\n",
+    "\n",
+    "# Calculate distances to school and hospital\n",
+    "df['distance_to_school'] = euclidean_distance(df['latitude'], df['longitude'], school_coords[1], school_coords[0])\n",
+    "df['distance_to_hospital'] = euclidean_distance(df['latitude'], df['longitude'], hospital_coords[1], hospital_coords[0])\n",
+    "\n",
+    "# Classify houses as close or far\n",
+    "df['close_to_school_or_hospital'] = (df['distance_to_school'] < 0.50) | (df['distance_to_hospital'] < 0.50)\n",
+    "\n",
+    "# Divide dataset into close and far groups\n",
+    "close_houses = df[df['close_to_school_or_hospital'] == True]['median_house_value']\n",
+    "far_houses = df[df['close_to_school_or_hospital'] == False]['median_house_value']\n",
+    "\n",
+    "# Perform Levene's test for equality of variances\n",
+    "levene_test = stats.levene(close_houses, far_houses)\n",
+    "\n",
+    "# Perform the independent samples t-test\n",
+    "t_test = stats.ttest_ind(close_houses, far_houses, equal_var=levene_test.pvalue > 0.05)\n",
+    "\n",
+    "# Summarize the results\n",
+    "results = {\n",
+    "    'Levene Statistic': levene_test.statistic,\n",
+    "    'Levene p-value': levene_test.pvalue,\n",
+    "    't-statistic': t_test.statistic,\n",
+    "    't-test p-value': t_test.pvalue\n",
+    "}\n",
+    "\n",
+    "results_df = pd.DataFrame(results, index=['Value'])\n",
+    "\n",
+    "# Interpret the results\n",
+    "alpha = 0.05\n",
+    "interpretation = results_df['t-test p-value'][0] < alpha\n",
+    "if interpretation:\n",
+    "    conclusion = \"Reject the null hypothesis: Houses close to a school or hospital are significantly more expensive.\"\n",
+    "else:\n",
+    "    conclusion = \"Fail to reject the null hypothesis: There is no significant difference in prices.\"\n",
+    "\n",
+    "results_df['Conclusion'] = conclusion\n",
+    "print(results_df)"
+   ]
   },
   {
    "cell_type": "code",
@@ -512,7 +749,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
